style(language): change display language to zh-CN

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!--script src="edge://resources/js/util.js"></script-->
     <script src="resources/js/util.js"></script>
     <script src="focus-visible.min.js"></script>
-    <script src="strings.js"></script>
+    <script src="strings-zh-CN.js"></script>
     <link href="interface.css" rel="stylesheet" media="all" />
   </head>
   <body>
